[package]
name = "jamjar"
version = "0.2.0"
authors = ["Vi <violet@hey.com>"]
description = "A collection of useful crates and utilities for quickly bootstrapping games for game jams."
edition = "2021"

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.rodio]
opt-level = 3

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "thin"

[features]
default = ["everything"]
image_atlas = ["image", "texture_packer"]
audio = ["rodio"]
codegen = ["edres"]
draw_sloth = ["gfx", "windowing"]
draw_groove = ["gfx", "math", "windowing"]
font = ["rusttype"]
gfx = ["gfx-hal", "gfx-auxil", "image"]
input = ["buttons", "windowing"]
logging = ["console_log", "console_error_panic_hook", "log"]
math = ["okmath"]
reloading = ["dirty_static", "dymod", "lazy_static", "resource", "serde_yaml", "toml"]
resources = ["resource"]
timing = ["wasm-bindgen"]
windowing = ["winit"]
everything = ["image_atlas", "audio", "font", "input", "logging", "math", "reloading", "resources", "timing", "windowing"]

dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
opengl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]
bypass_spirv_cross = []

dxdev = ["everything", "draw_groove", "draw_sloth", "dx12"]
metaldev = ["everything", "draw_groove", "draw_sloth", "metal"]
vulkandev = ["everything", "draw_groove", "draw_sloth", "vulkan"]

[dependencies]
# coreaudio-sys = "=0.2.13"
buttons = { version = "~0.3.1", features = ["winit-support"], optional = true }
dirty_static = { version = "~0.1.1", optional = true }
edres = { version = "~0.5", optional = true, features = ["experimental-files-enum", "toml-parsing", "yaml-parsing"] }
gfx-hal = { version = "~0.7.0", optional = true }
gfx-backend-dx12 = { version = "~0.7.1", optional = true }
gfx-backend-gl = { version = "~0.7.1", optional = true }
gfx-backend-metal = { version = "~0.7.0", optional = true }
gfx-backend-vulkan = { version = "~0.7.0", optional = true }
image = { version = "~0.23.14", optional = true }
lazy_static = { version = "~1.4.0", optional = true }
log = { version = "~0.4.14", optional = true }
okmath = { git = "https://github.com/mistodon/okmath", branch = "main", optional = true }
rusttype = { version = "~0.9.2", features = ["gpu_cache"], optional = true }
serde = { version = "~1.0.125", features = ["derive"] }
serde_yaml = { version = "~0.8.17", optional = true }
texture_packer = { version = "~0.22.0", optional = true }
toml = { version = "~0.5.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "~0.2.0", optional = true }
console_error_panic_hook = { version = "~0.1.6", optional = true }
dymod = { version = "~0.3", optional = true, default-features = false }
gfx-auxil = { version = "~0.8.0", optional = true }
resource = { version = "~0.5", optional = true, features = ["experimental-resource-list"] }
rodio = { version = "~0.13.1", optional = true, features = ["flac", "vorbis", "wav", "wasm-bindgen"], default-features = false }
wasm-bindgen = { version = "~0.2.73", optional = true }
winit = { version = "~0.24", optional = true, features = ["web-sys"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dymod = { version = "~0.3", optional = true }
resource = { version = "~0.5", optional = true, features = ["experimental-resource-list"] }
rodio = { version = "~0.13.1", optional = true, features = ["flac", "vorbis", "wav"], default-features = false }
winit = { version = "~0.24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.50"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Touch", "TouchEvent", "TouchList", "Window" ]
