[package]
name = "jamjar"
version = "0.2.0"
authors = ["Vi <violet@hey.com>"]
description = "A collection of useful crates and utilities for quickly bootstrapping games for game jams."
edition = "2021"

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.rodio]
opt-level = 3

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "thin"

[features]
default = ["everything"]
image_atlas = ["dep:image", "dep:texture_packer"]
audio = ["dep:rodio"]
codegen = ["dep:edres"]
draw_sloth = ["gfx", "windowing"]
draw_groove = ["gfx", "math", "windowing"]
draw_forever = ["gfx", "math", "windowing"]
draw_popup = ["dep:hvec", "font", "gltf", "wgpu", "math", "windowing"]
draw_cherry = ["bitflags", "dep:hvec", "font", "gltf", "wgpu", "math", "windowing", "dep:web-time"]
dymod = ["dep:dymod"]
font = ["dep:rusttype"]
gfx = ["dep:gfx-hal", "dep:gfx-auxil", "dep:image"]
glace = ["dep:glace"]
input = ["dep:buttons", "windowing"]
logging = ["dep:console_log", "dep:console_error_panic_hook", "dep:log"]
math = ["dep:okmath"]
mesh = []
gltf = ["dep:gltf"]
timing = ["dep:wasm-bindgen", "dep:web-time"]
windowing = ["dep:winit"]
wgpu = ["dep:wgpu"]
everything = ["image_atlas", "audio", "dymod", "font", "glace", "input", "logging", "math", "mesh", "timing", "windowing"]

dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
opengl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]
bypass_spirv_cross = []

wdev = ["everything", "draw_cherry", "glace"]
dxdev = ["everything", "draw_groove", "draw_sloth", "draw_forever", "dx12"]
metaldev = ["everything", "draw_groove", "draw_sloth", "draw_forever", "metal"]
vulkandev = ["everything", "draw_groove", "draw_sloth", "draw_forever", "vulkan"]

[dependencies]
bitflags = { version = "2.3", optional = true }
buttons = { version = "0.6", optional = true, features = ["winit_0_29"] }
dirty_static = { version = "0.1", optional = true }
edres = { version = "0.6", optional = true, features = ["toml", "yaml"] }
gfx-hal = { version = "0.9", optional = true }
gfx-backend-dx12 = { version = "0.9", optional = true }
gfx-backend-gl = { version = "0.9", optional = true }
gfx-backend-metal = { version = "0.9", optional = true }
gfx-backend-vulkan = { version = "0.9", optional = true }
gltf = { version = "1.0", optional = true }
hvec = { version = "0.5", optional = true }
image = { version = "0.24", optional = true }
lazy_static = { version = "1.4", optional = true }
log = { version = "0.4", optional = true }
rusttype = { version = "0.9", features = ["gpu_cache"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8", optional = true }
texture_packer = { version = "0.24", optional = true }
toml = { version = "0.5", optional = true }
wgpu = { version = "24", features = ["webgl"], optional = true }

[dependencies.glace]
version = "0.3"
git = "https://github.com/mistodon/glace"
rev = "7e0bc9c"
optional = true

[dependencies.okmath]
version = "0.3"
git = "https://github.com/mistodon/okmath"
rev = "08de4f2"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
dymod = { version = "0.5", optional = true, default-features = false }
gfx-auxil = { version = "0.10", optional = true }
rodio = { version = "0.17", optional = true, features = ["flac", "vorbis", "wav", "wasm-bindgen"], default-features = false }
wasm-bindgen = { version = "0.2.97", optional = true }
wasm-bindgen-futures = { version = "0.4" }
web-time = { version = "1", optional = true }
winit = { version = "0.29", optional = true }
wgpu = { version = "24", features = ["webgl"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dymod = { version = "0.5", optional = true }
rodio = { version = "0.17", optional = true, features = ["flac", "vorbis", "wav"], default-features = false }
pollster = { version = "0.2" }
winit = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlImageElement",
    "ImageBitmap",
    "ImageBitmapRenderingContext",
    "ImageData",
    "Location",
    "Node",
    "OffscreenCanvas",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WebGl2RenderingContext",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "console",
    "gpu_map_mode",
]

[build-dependencies]
cfg_aliases = "0.2"
