[package]
name = "jamjar-examples"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]
edition = "2018"

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
jamjar = { path = "..", features = ["everything"] }

[build-dependencies]
jamjar = { path = "..", features = ["codegen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "~0.1.6"
console_log = "~0.2"
log = "~0.4.11"
wasm-bindgen = "~0.2.69"
