[package]
name = "jamjar-examples"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]
edition = "2018"

[features]
default = ["metal"]
opengl = ["jamjar/opengl"]
metal = ["jamjar/metal"]

[dependencies]
image = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
jamjar = { path = "..", features = ["everything", "drawsloth"] }

[build-dependencies]
jamjar = { path = "..", features = ["codegen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
log = "*"
wasm-bindgen = "*"
