[package]
name = "jamjar-cli"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
description = "A simple, opinionated tool for packaging Rust apps for different platforms. Mostly intended for game jams."
edition = "2018"

[[bin]]
name = "jamjar"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["structopt"]

[dependencies]
failure = "~0.1.8"
handlebars = "~3.5.4"
image = "~0.23.14"
serde = { version = "~1.0.125", features = ["derive"] }
tempfile = "~3.2.0"
toml = "~0.5.8"
zip = "~0.5.11"

[dependencies.structopt]
optional = true
version = "~0.3.21"
