[package]
name = "jamjar-cli"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
description = "A simple, opinionated tool for packaging Rust apps for different platforms. Mostly intended for game jams."
edition = "2021"

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "thin"

[[bin]]
name = "jamjar"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["structopt"]

[dependencies]
handlebars = "~4.3.0"
image = "~0.24.2"
serde = { version = "~1.0.137", features = ["derive"] }
tempfile = "~3.2.0"
thiserror = "~1.0.24"
toml = "~0.5.9"
zip = "~0.5.11"

[dependencies.structopt]
optional = true
version = "~0.3.21"
