[package]
name = "jamjar-cli"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
description = "A simple, opinionated tool for packaging Rust apps for different platforms. Mostly intended for game jams."
edition = "2021"

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "thin"

[[bin]]
name = "jamjar_legacy"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["structopt"]

[dependencies]
handlebars = "~3.5.4"
image = "~0.23.14"
serde = { version = "~1.0.125", features = ["derive"] }
tempfile = "~3.2.0"
thiserror = "~1.0.24"
toml = "~0.5.8"
zip = "~0.5.11"

[dependencies.structopt]
optional = true
version = "~0.3.21"
