[package]
name = "jamjar-examples"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2018"

[features]
default = ["metal"]
opengl = ["jamjar/opengl"]
metal = ["jamjar/metal"]
glsl = ["jamjar/bypass_spirv_cross"]

[dependencies]
image = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
jamjar = { path = "..", features = ["everything", "drawsloth", "drawgroovy"] }

[build-dependencies]
jamjar = { path = "..", features = ["codegen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
log = "*"
wasm-bindgen = "*"
