[package]
name = "jamjar-examples"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2021"

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.rodio]
opt-level = 3

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "thin"

[features]
default = ["metal"]
opengl = ["jamjar/opengl"]
metal = ["jamjar/metal"]
glsl = ["jamjar/bypass_spirv_cross"]

[dependencies]
image = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
jamjar = { path = "..", features = ["codegen", "everything", "draw_sloth", "draw_groove"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "*" }

[build-dependencies]
jamjar = { path = "..", features = ["codegen"] }
